--- a/unit-converter-tools.html
+++ b/unit-converter-tools.html
@@ -31,6 +31,182 @@
   <link rel="alternate" href="https://www.alltoolai.com/unit-converter-tools" hreflang="x-default" />
   <link rel="alternate" href="https://www.alltoolai.com/unit-converter-tools" hreflang="en" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "description": "All Tool AI provides free, fast, accurate, and privacy-first online unit converter tools and AI utilities.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Unit Converter Tools",
+    "url": "https://www.alltoolai.com/unit-converter-tools",
+    "description": "Convert between metric and imperial units instantly with All Tool AI’s free online unit converter tools. Fast, accurate, and privacy-first conversions for length, mass, temperature, speed, and more.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "url": "https://www.alltoolai.com/unit-converter-tools",
+    "name": "Free Unit Converter Tools | All Tool AI",
+    "headline": "Free Unit Converter Tools – Fast, Accurate, Privacy-First, and Unlimited",
+    "description": "All Tool AI provides free, fast, accurate, and privacy-first unit converter tools for length, mass, temperature, speed, volume, pressure, energy, frequency, time, and more. Works worldwide with metric and imperial units.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "description": "All Tool AI offers free, fast, and privacy-focused online tools including unit converters, calculators, and AI utilities.",
+    "sameAs": [
+      "https://twitter.com/alltoolai",
+      "https://www.linkedin.com/company/alltoolai"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/unit-converter-tools",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Unit Converter Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 14,
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1,  "name": "Length Unit Converter",          "url": "https://www.alltoolai.com/length-unit-converter" },
+      { "@type": "ListItem", "position": 2,  "name": "Area Unit Converter",            "url": "https://www.alltoolai.com/area-unit-converter" },
+      { "@type": "ListItem", "position": 3,  "name": "Data Transfer Rate Converter",   "url": "https://www.alltoolai.com/data-transfer-rate-unit-converter" },
+      { "@type": "ListItem", "position": 4,  "name": "Digital Storage Unit Converter", "url": "https://www.alltoolai.com/digital-storage-unit-converter" },
+      { "@type": "ListItem", "position": 5,  "name": "Energy Unit Converter",          "url": "https://www.alltoolai.com/energy-unit-converter" },
+      { "@type": "ListItem", "position": 6,  "name": "Frequency Unit Converter",       "url": "https://www.alltoolai.com/frequency-unit-converter" },
+      { "@type": "ListItem", "position": 7,  "name": "Fuel Economy Unit Converter",    "url": "https://www.alltoolai.com/fuel-economy-unit-converter" },
+      { "@type": "ListItem", "position": 8,  "name": "Mass Unit Converter",            "url": "https://www.alltoolai.com/mass-unit-converter" },
+      { "@type": "ListItem", "position": 9,  "name": "Plane Angle Unit Converter",     "url": "https://www.alltoolai.com/angle-unit-converter" },
+      { "@type": "ListItem", "position": 10, "name": "Pressure Unit Converter",        "url": "https://www.alltoolai.com/pressure-unit-converter" },
+      { "@type": "ListItem", "position": 11, "name": "Temperature Unit Converter",     "url": "https://www.alltoolai.com/temperature-unit-converter" },
+      { "@type": "ListItem", "position": 12, "name": "Speed Unit Converter",           "url": "https://www.alltoolai.com/speed-unit-converter" },
+      { "@type": "ListItem", "position": 13, "name": "Time Unit Converter",            "url": "https://www.alltoolai.com/time-unit-converter" },
+      { "@type": "ListItem", "position": 14, "name": "Volume Unit Converter",          "url": "https://www.alltoolai.com/volume-unit-converter" }     
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Are the unit converters free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All Tool AI’s unit converters are free, unlimited, and require no signup."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support metric and imperial/US/UK units?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The converters support metre/meter, litre/liter, US & UK gallons, stone, miles, yards, feet, inches, and more."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my information private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Inputs are processed securely, and no personal calculation data is stored."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do the tools work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The converters are optimized for mobile and desktop across all major browsers and work worldwide."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which conversions are included?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Conversions include length, area, mass, temperature, speed, volume, pressure, energy, frequency, time, digital storage, and data rates."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "All Tool AI uses standard conversion factors with clear rounding and optional precision controls for high accuracy."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
@@ -409,7 +585,6 @@
 
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
-
 
 </body>
 </html>
