--- a/text-tools.html
+++ b/text-tools.html
@@ -33,6 +33,167 @@
   <link rel="alternate" href="https://www.alltoolai.com/text-tools" hreflang="x-default" />
   <link rel="alternate" href="https://www.alltoolai.com/text-tools" hreflang="en" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Text Tools: Text to PDF/HTML/Code + Analyzer & Formatter",
+    "url": "https://www.alltoolai.com/text-tools",
+    "description": "Free online text tools to convert, analyze, and format text: Text to PDF/HTML/Code, Analyzer, and Formatter. Fast, free, unlimited, and privacy first.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/",
+      "name": "All Tool AI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "url": "https://www.alltoolai.com/text-tools",
+    "name": "Free Online Text Tools | All Tool AI",
+    "headline": "Free Online Text Tools – Convert, Analyze, and Format Text Instantly",
+    "description": "All-in-one AI-powered text tools to convert, analyze, and format text securely and for free. Includes Text to PDF, HTML, Code, Analyzer, and Formatter.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.alltoolai.com/assets/svg/logo.svg"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/alltoolai",
+      "https://twitter.com/alltoolai"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/text-tools",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Text Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 5,
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "Text to PDF", "url": "https://www.alltoolai.com/text-to-pdf" },
+      { "@type": "ListItem", "position": 2, "name": "Html to Text", "url": "https://www.alltoolai.com/html-to-text" },
+      { "@type": "ListItem", "position": 3, "name": "Text to Code", "url": "https://www.alltoolai.com/text-to-code" },
+      { "@type": "ListItem", "position": 4, "name": "Text Analyzer", "url": "https://www.alltoolai.com/text-analyzer" },
+      { "@type": "ListItem", "position": 5, "name": "Text Formatter", "url": "https://www.alltoolai.com/text-formatter" }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Are these text tools free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All Tool AI text tools are fast, free, and unlimited for everyday use. No signup required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my information private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your inputs are processed securely and your information is kept confidential. We follow a privacy-first approach."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which tools are included?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Text to PDF, Html to Text, Text to Code, Code to Text, Text Analyzer, and Text Formatter."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do these tools work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All tools are optimized for desktop and mobile across major browsers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I use these tools for work, school, or commercial projects?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can use the tools for professional, academic, and personal projects for content you own or are authorized to edit."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
@@ -321,7 +482,6 @@
 
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
-
 
 </body>
 </html>
