--- a/audio-tools.html
+++ b/audio-tools.html
@@ -30,6 +30,196 @@
   <link rel="alternate" href="https://www.alltoolai.com/audio-tools" hreflang="x-default">
   <link rel="alternate" href="https://www.alltoolai.com/audio-tools" hreflang="en">
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Online Audio Tools",
+    "url": "https://www.alltoolai.com/audio-tools",
+    "description": "Convert video to MP3/WAV, convert MP3↔WAV, and cut audio in your browser. Free, fast, secure, and privacy-first online tools for creators and students.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "url": "https://www.alltoolai.com/audio-tools",
+    "name": "Free Online Audio Tools | All Tool AI",
+    "headline": "Free Online Audio Tools – Convert, Cut, and Edit Audio Files Instantly",
+    "description": "All Tool AI offers free online audio tools to convert and edit audio: video to MP3/WAV, MP3↔WAV conversion, and audio cutting directly in your browser. Fast, secure, and privacy-first.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "All Tool AI Audio Tools",
+    "url": "https://www.alltoolai.com/audio-tools",
+    "description": "Free online audio tools for converting and editing audio: Video to MP3, Video to WAV, MP3 to WAV, WAV to MP3, and Audio Cutter. 100% free, private, and unlimited use.",
+    "brand": {
+      "@type": "Brand",
+      "name": "All Tool AI"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/audio-tools",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Audio Tools",
+        "item": "https://www.alltoolai.com/audio-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Audio Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 5,
+    "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "url": "https://www.alltoolai.com/video-to-mp3-converter",
+          "name": "Video to MP3 Converter"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "url": "https://www.alltoolai.com/video-to-wav-converter",
+          "name": "Video to WAV Converter"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "url": "https://www.alltoolai.com/mp3-to-wav-converter",
+          "name": "MP3 to WAV Converter"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "url": "https://www.alltoolai.com/wav-to-mp3-converter",
+          "name": "WAV to MP3 Converter"
+        },
+        {
+          "@type": "ListItem",
+          "position": 5,
+          "url": "https://www.alltoolai.com/audio-cutter",
+          "name": "Audio Cutter"
+        }
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Which audio formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Video to MP3/WAV from MP4, MOV, AVI, and WebM. Direct MP3↔WAV conversions. Export from the cutter to MP3 or WAV."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are there file size or usage limits?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Typical files convert instantly in the browser. For large files, we optimize server-side and remove them after processing. Unlimited use, lifetime free."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is this private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Processing is privacy-first and mostly local in your browser. Files processed server-side are auto-deleted after completion."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will converting MP3 to WAV improve quality?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. WAV is lossless, but converting a lossy MP3 to WAV won’t recover lost detail. Use WAV for editing or mastering."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What MP3 bitrate should I choose?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "128 kbps: smaller size for voice. 192 kbps: good balance for music. 256–320 kbps: higher quality for music and mastering."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
@@ -282,7 +472,6 @@
 
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
-
 
 </body>
 </html>
