--- a/add-pdf-page-numbers.html
+++ b/add-pdf-page-numbers.html
@@ -29,6 +29,138 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/add-pdf-page-numbers" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/add-pdf-page-numbers" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/add-pdf-page-numbers",
+    "name": "Add Page Numbers to PDF Online (Free, Private)",
+    "description": "Add page numbers to your PDF instantly — 100% secure, free, and processed locally. Customize format, font, color, alignment, and range.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/",
+      "name": "AllToolAI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Add PDF Page Numbers",
+    "operatingSystem": "Any (web-based)",
+    "applicationCategory": "UtilityApplication",
+    "description": "Free online tool to add page numbers to PDF documents securely in your browser. No uploads, no watermarks, 100% client-side.",
+    "url": "https://www.alltoolai.com/add-pdf-page-numbers",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "featureList": [
+      "Add page numbers to PDFs",
+      "Runs locally in browser (no uploads)",
+      "Custom page number format, font, and color",
+      "Supports page ranges and alignment options",
+      "Free and watermark-free output"
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Add PDF Page Numbers",
+        "item": "https://www.alltoolai.com/add-pdf-page-numbers"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it add a watermark?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. It’s free and watermark free forever."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I number only certain pages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Set the page range (e.g., 2–8) to include only the pages you want."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I change fonts and colors?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Choose Helvetica, Times, or Courier; adjust size and color."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will the PDF content change?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Only page numbers are added; your content is preserved as is."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
