--- a/add-pdf-page-numbers.html
+++ b/add-pdf-page-numbers.html
@@ -60,7 +60,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "CollectionPage",
+    "@type": "SoftwareApplication",
     "name": "Add PDF Page Numbers",
     "operatingSystem": "Any (web-based)",
     "applicationCategory": "UtilityApplication",
