--- a/index.html
+++ b/index.html
@@ -84,18 +84,24 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Offer",
+    "@type": "WebApplication",
+    "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "priceCurrency": "USD",
-    "price": "0.00",
-    "availability": "https://schema.org/InStock",
-    "itemCondition": "https://schema.org/NewCondition",
-    "seller": {
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Web",
+    "description": "Your all-in-one AI assistant for everyday tasks — free tools for image editing, PDF conversion, text formatting, QR generation, unit conversion, and calculators.",
+    "isAccessibleForFree": true,
+    "provider": {
       "@type": "Organization",
       "name": "All Tool AI",
       "url": "https://www.alltoolai.com/"
     },
-    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    }
   }
   </script>
   <script type="application/ld+json">
